--- a/css/media.css
+++ b/css/media.css
@@ -8,6 +8,13 @@
   .container {
     max-width: 736px;
   }
+  .team-item {
+    width: calc((100% - 24px) / 2);
+  }
+  .team-list {
+    column-gap: 24px;
+    row-gap: 64px;
+  }
   .customers-item {
     width: calc((100% - 48px) / 3);
   }
@@ -17,18 +24,28 @@
   .customers-link {
     width: 168px;
     height: 88px;
-  }
-  .team-item {
-    width: calc((100% - 24px) / 2);
-  }
-  .team-list {
-    column-gap: 24px;
-  }
-}
+ }
 
 @media screen and (min-width: 1158px) {
   .container {
     max-width: 1158px;
+  }
+.work-list {
+  display: flex;
+  gap: 30px;
+}
+.work {
+  padding-top: 0;
+  display: block;
+}
+.work-item {
+  position: relative;
+}
+  .team-item {
+    width: calc((100% - 72px) / 4);
+  }
+  .team-list {
+    column-gap: 24px;
   }
   .customers-item {
     width: calc((100% - 120px) / 6);
@@ -41,10 +58,4 @@
     padding-top: 120px;
     padding-bottom: 120px;
   }
-  .team-item {
-    width: calc((100% - 72px) / 4);
   }
-  .team-list {
-    column-gap: 24px;
-  }
-}
