--- a/css/styles.css
+++ b/css/styles.css
@@ -244,48 +244,10 @@ button {
   line-height: 1.71;
 }
 /*Work section*/
-.work-list {
-  display: flex;
-  gap: 30px;
-}
+
 .work {
-  padding-top: 0;
+  display: none;
 }
-.work-item {
-  position: relative;
-}
-.about-svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 270px;
-  height: 120px;
-  background-color: var(--gray-bg-cl);
-  margin-bottom: 30px;
-}
-.work-img-overlay {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 70px;
-  bottom: 0;
-  left: 0;
-
-  background-color: rgba(47, 48, 58, 0.8);
-}
-.work-img-overlay-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-
-  color: var(--light-bg-cl);
-}
-
 /*Team section*/
 .team {
   background-color: var(--light);
@@ -296,6 +258,7 @@ button {
 .team-list {
   display: flex;
   flex-wrap: wrap;
+  row-gap: 64px;
   /* gap: 30px; */
 }
 .team-item {
