--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,8 @@
-@media screen and (min-width: 428px) {
+/* @media screen and (min-width: 428px) {
   .container {
     max-width: 396px;
   }
-}
+} */
 
 @media screen and (min-width: 768px) {
   .container {
