--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,63 @@ address {
   padding: 0;
   line-height: 0;
 }
+.mobile-menu-list {
+  margin-top: 80px;
+  margin-bottom: 284px;
+}
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+.mobile-menu-link {
+  font-size: 36px;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  color: var(--dark);
+}
+.mobile-menu-link-current {
+  color: var(--pressed-state);
+}
+.mobile-menu-adress-list {
+}
+.mobile-menu-tel {
+  display: block;
+  font-size: 30px;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.72px;
+  text-transform: capitalize;
+  color: var(--primary-brand);
+}
+.mobile-menu-mail {
+  font-size: 20px;
+  font-family: Roboto;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  color: var(--text);
+}
+.mobile-menu-soc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 56px;
+  margin-top: 48px;
+}
+.mobile-menu-soc-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  color: var(--light);
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+}
+
 /*Альтернатива gap*/
 /*.header-item {
   margin-right: 50px;
@@ -144,29 +201,31 @@ address {
 }*/
 .logo-link {
   font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  color: var(--accent-txt-cl);
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  color: var(--primary-brand);
   padding: 24px 0;
+  letter-spacing: 0.54px;
+  text-transform: uppercase;
 }
 .logo-accent {
-  color: #000000;
+  color: var(--dark);
 }
 .header-nav {
   margin-right: auto;
   display: flex;
 }
 .header-link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 24px;
+  padding-bottom: 24px;
   display: block;
 
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--secondary-txt-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  color: var(--dark);
   transition: color var(--animation);
 }
 .header-link:hover,
@@ -175,10 +234,10 @@ address {
 .header-mail:focus,
 .header-tel:hover,
 .header-tel:focus {
-  color: var(--accent-txt-cl);
+  color: var(--pressed-state);
 }
 .header-link-current {
-  color: var(--accent-txt-cl);
+  color: var(--pressed-state);
   position: relative;
 }
 .header-link-current::after {
@@ -190,23 +249,19 @@ address {
   width: 100%;
   height: 4px;
 
-  background-color: var(--accent-txt-cl);
+  background-color: var(--pressed-state);
   border-radius: 2px;
-}
-.mail-icon,
-.tel-icon {
-  fill: currentColor;
-  margin-right: 10px;
 }
 .header-mail,
 .header-tel {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: inherit;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.48px;
+  color: var(--text);
   transition: color var(--animation);
 }
+
 .mobile-menu {
   position: fixed;
   width: 100%;
@@ -225,6 +280,7 @@ address {
 }
 .menu-container {
   position: relative;
+  padding: 24px 40px;
 }
 .menu-close-btn {
   position: absolute;
