--- a/css/styles.css
+++ b/css/styles.css
@@ -439,7 +439,7 @@ address {
 .about-desc {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.71;
+  line-height: 1.5;
 }
 .about-svg {
   display: none;
@@ -833,29 +833,30 @@ address {
 }
 /*Portfolio section*/
 .project-list-btn {
-  margin-bottom: 50px;
+  margin-bottom: 48px;
   display: flex;
-  gap: 8px;
-  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  min-width: 263px;
 }
 .projects-btn {
-  padding: 6px 22px;
+  padding: 12px 24px;
   border-radius: 4px;
   border: none;
-  background-color: var(--gray-bg-cl);
+  background-color: var(--light);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
-  color: var(--secondary-txt-color);
+  color: var(--primary-brand);
   cursor: pointer;
   letter-spacing: 0.03em;
   transition: color var(--animation), background-color var(--animation), box-shadow var(--animation);
 }
 .projects-btn:hover,
 .projects-btn:focus {
-  color: var(--light-bg-cl);
-  background-color: var(--accent-txt-cl);
+  color: #fff;
+  background-color: var(--pressed-state);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -874,7 +875,7 @@ address {
 .cards-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  gap: 48px;
 }
 .cards-description {
   border: 1px solid #eeeeee;
@@ -928,6 +929,29 @@ address {
   color: var(--light-bg-cl);
 
   user-select: none;
+}
+@media screen and (min-width: 768px) {
+  .project-list-btn {
+    margin-bottom: 64px;
+    justify-content: center;
+  }
+  .cards-list {
+    gap: 72px 24px;
+  }
+  .cards-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+@media screen and (min-width: 1158px) {
+  .project-list-btn {
+    margin-bottom: 72px;
+  }
+  .cards-list {
+    gap: 48px 24px;
+  }
+  .cards-item {
+    width: calc((100% - 48px) / 3);
+  }
 }
 /*Socials icons*/
 .socials {
