--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
   color: var(--dark);
   background-color: #fff;
   font-size: 14px;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.32px;
 }
 /*Reset styles*/
 h1,
@@ -62,7 +62,7 @@ address {
 .container {
   max-width: 428px;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0 15px;
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -83,7 +83,7 @@ address {
   text-decoration: none;
 }
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 72px;
 
   font-weight: 700;
   font-size: 36px;
@@ -108,7 +108,9 @@ address {
 .header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: #ececec;
+  border-bottom-color: var(--accent);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -135,6 +137,7 @@ address {
   padding: 0;
   line-height: 0;
 }
+
 .mobile-menu-list {
   margin-bottom: auto;
 }
@@ -153,8 +156,7 @@ address {
 .mobile-menu-link-current {
   color: var(--pressed-state);
 }
-.mobile-menu-adress-list {
-}
+
 .mobile-menu-tel {
   font-size: 30px;
   font-family: Roboto;
@@ -229,10 +231,8 @@ address {
 }
 .header-link:hover,
 .header-link:focus,
-.header-mail:hover,
-.header-mail:focus,
-.header-tel:hover,
-.header-tel:focus {
+.header-contact:hover,
+.header-contact:focus {
   color: var(--pressed-state);
 }
 .header-link-current {
@@ -332,6 +332,7 @@ address {
   .header-contact {
     font-size: 16px;
     line-height: 1.5;
+    letter-spacing: 0.32px;
   }
 }
 /*Hero section*/
@@ -348,7 +349,7 @@ address {
 .hero-title {
   max-width: 320px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -371,6 +372,11 @@ address {
   color: #fff;
   background-color: var(--primary-brand);
   border-radius: 4px;
+  transition: color var(--animation);
+}
+.hero-btm:hover,
+.hero-btm:focus {
+  background-color: var(--pressed-state);
 }
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
   screen and (min-resolution: 192dpi) and (max-width: 767px),
@@ -391,6 +397,7 @@ address {
     letter-spacing: 1.12px;
     max-width: 496px;
     margin-bottom: 36px;
+    text-transform: none;
   }
 }
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
@@ -596,7 +603,6 @@ address {
   justify-content: center;
   column-gap: 16px;
   row-gap: 72px;
-  margin-top: 72px;
 }
 .customers-link {
   display: flex;
@@ -906,15 +912,9 @@ address {
   right: 0;
   width: 100%;
   height: 101%;
-  padding: 63px 24px;
+  padding: 40px 32px;
   transform: translateY(100%);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  background-color: rgba(33, 150, 243, 0.9);
-
+  background-color: var(--primary-brand);
   transition: transform var(--animation);
 }
 .cards-item:hover .overlay {
@@ -922,12 +922,10 @@ address {
 }
 .overlay-text {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-
-  color: var(--light-bg-cl);
-
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  color: var(--light);
   user-select: none;
 }
 @media screen and (min-width: 768px) {
@@ -1039,11 +1037,13 @@ address {
   border: 1px solid #0000001a;
   cursor: pointer;
   transition: fill var(--animation);
+  transition: background-color var(--animation);
   line-height: 0;
   background-color: var(--accent);
 }
 .modal-btn-close:hover {
-  fill: var(--accent-txt-cl);
+  fill: #fff;
+  background-color: var(--pressed-state);
 }
 .modal-title {
   display: block;
@@ -1060,6 +1060,7 @@ address {
 .form-element {
   display: flex;
   flex-direction: column;
+  padding-bottom: 8px;
 }
 .form-element label {
   margin-bottom: 4px;
@@ -1071,14 +1072,13 @@ address {
 }
 .input-wrap {
   position: relative;
-  margin-bottom: 10px;
 }
 .modal-icon {
   position: absolute;
   top: 50%;
   left: 12px;
   translate: 0 -50%;
-  color: var(--dark);
+  fill: var(--dark);
 }
 .form-element input {
   height: 40px;
@@ -1118,7 +1118,7 @@ address {
   transition: border var(--animation);
 }
 .form-element textarea:focus {
-  border: 1px solid var(--pressed-state);
+  border: 1px solid var(--primary-brand);
   border-radius: 4px;
   outline: none;
 }
