--- a/css/styles.css
+++ b/css/styles.css
@@ -567,8 +567,8 @@ address {
   color: var(--dark);
 }
 .team-desc {
-  margin-top: 10px;
-  margin-bottom: 16px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 
   font-weight: 400;
   font-size: 16px;
@@ -627,7 +627,7 @@ address {
 }
 @media screen and (min-width: 768px) {
   .customers-container {
-    width: 552px;
+    width: 582px;
   }
   .customers-item {
     width: calc((100% - 48px) / 3);
@@ -790,7 +790,7 @@ address {
     flex-wrap: wrap;
 
     flex-direction: row;
-    width: 556px;
+    width: 582px;
     gap: 72px 24px;
   }
   .footer-logo-txt {
@@ -1002,6 +1002,7 @@ address {
   opacity: 1;
   visibility: visible;
   transition: opacity var(--animation), visibility var(--animation);
+  overflow: scroll;
 }
 .backdrop.is-hidden {
   opacity: 0;
@@ -1011,7 +1012,7 @@ address {
 .modal {
   position: absolute;
   padding: 72px 16px 24px;
-  top: 50%;
+  top: 20px;
   left: 50%;
   width: 100%;
   min-height: 581px;
@@ -1019,7 +1020,7 @@ address {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%) scale(1);
   transition: transform var(--animation);
 }
 .backdrop.is-hidden .modal {
